@@ -1,10 +1,0 @@
-package Coat::Type::Item;
-
-use strict;
-use warnings;
-
-use base 'Coat::Type';
-
-sub is_valid { 1 }
-
-1;
