@@ -1,13 +1,0 @@
-package Coat::Type::Item::Defined::Ref::ScalarRef;
-
-use strict;
-use warnings;
-
-use base 'Coat::Type::Item::Defined::Ref';
-
-sub is_valid {
-    $_[0]->SUPER::is_valid($_[1]) && 
-    ((ref $_[1]) eq 'SCALAR');
-}
-
-1;
